# TwoClocks

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  License.md  README.md  TwoClocks.sublime-project  TwoClocks.sublime-workspace  compile_commands.json  valgrind-out.txt
include/: audio.h  construct_absolute_paths.h  convert_string_to_int.h  core.h  draw_circle.h  glyph.h  load_bmp.h  print_time.h  sdl_surfaces_header.h
src/: audio.m  construct_absolute_paths.c  convert_string_to_int.c  core.c  draw_circle.c  glyph.c  load_bmp.c  main.c  print_time.c
